Consolidated style sheet

--- a/index.html
+++ b/index.html
@@ -4,31 +4,6 @@
 		<title>catsanddo</title>
 		<meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            height: 100%;
-            overflow: hidden;
-        }
-
-        #title {
-            font-size: 62;
-            font-family: sans-serif;
-            text-align: center;
-            margin: auto;
-            width: 25%;
-            padding: 15% 0;
-            border: 3px;
-        }
-    
-        #subtitle {
-            font-size: 25;
-            font-family: sans-serif;
-        }
-        #links {
-            text-align: center;
-            padding: 70px 0;
-        }
-    </style>
 	</head>
 	<body>
         <div id="title">
@@ -38,7 +13,10 @@
             </div>
         </div>
         <div id="links">
-            <h5><a href="https://github.com/catsanddo">Github</a> | <a href="https://catsanddo.itch.io/">itch.io</a></h5>
+            <h5>
+                <a href="https://github.com/catsanddo">Github</a> |
+                <a href="https://catsanddo.itch.io/">itch.io</a>
+            </h5>
         </div>
 	</body>
 </html>
