--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 	<head>
-		<title>catsanddo</title>
+		<title>Low Level Dev</title>
 		<meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body>
         <div id="title">
