--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body>
+        <div id="topbar">
+            <p>
+                <a href=".">Home</a> |
+                <a href=".">Blog</a> |
+                <a href=".">Games</a>
+            </p>
+        </div>
         <div id="title">
             <h1>Catsanddo</h1>
             <div id="subtitle">
